# pages2pdf

./: .gitignore  README.md  pages2pdf.py  pyproject.toml  requirements.txt  test_pages2docx.py  upload.sh
