[project]
name = "pages2docx"
version = "0.0.7"
authors = [
    { name = "Problemli GmbH", email = "info@problem.li" },
]
description = "Converts .pages to .docx"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
# Define project dependencies here
dependencies = [
    "click>=8.1.7",
    "cloudconvert>=2.1.0",
]
[project.urls]
Homepage = "https://github.com/blemli/pages2docx"
Issues = "https://github.com/blemli/pages2docx/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
pages2docx = "pages2docx:cli"